--- a/css/styles.css
+++ b/css/styles.css
@@ -978,9 +978,14 @@ img {
   }
 }
 
+@media only screen and (max-width: 767.98px) {
+  .section-four .item {
+    width: calc((100% - 16px) / 2);
+  }
+}
+
 .section-four .link {
   display: flex;
-  min-width: 190px;
   height: 88px;
   justify-content: center;
   align-items: center;
